# numerai-contest

./: .gitignore  README.md  pyproject.toml
analysis/: constants.py  eda.py  neutralize.py  selector.py  view.py
engine/: constants.py  train_medium.py  train_small.py
script/: numerai-medium-training.ipynb  numerai-v52-generating.ipynb  numerai-v52-training.ipynb  numerai-v52-validating.ipynb
src/: baseline.py  constant.py  download.py  login.py  upload.py
tools/: baseline.py  constants.py  download.py  login.py  upload.py
